<resources>
    <string name="app_name">GoFit</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="changePasswordMenu">Change Password</string>
    <string name="jadwal">Jadwal</string>
    <string name="login">Login</string>
    <string name="masukkan_password">Masukkan Password</string>
    <string name="masukkan_username">Masukkan Username</string>
    <string name="anda_instruktur_login">Anda Instruktur Login</string>
    <string name="disini">Disini</string>
    <string name="anda_member_login">Anda Member Login</string>
    <string name="jadwal2">Jadwal :</string>
    <string name="tanggal">Tanggal :</string>
    <string name="sesi">Sesi :</string>
    <string name="booking">Booking</string>
    <string name="change_password">Change Password</string>
    <string name="logout">Logout</string>
    <string name="instruktur_pengganti">Masukkan Nama Instruktur Pengganti</string>
    <string name="izin">Izin</string>
</resources>