<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    app:cardCornerRadius="8dp"
    tools:context=".ui.activity.bookingkelas.BookingKelasActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="16dp">

        <TextView
            android:id="@+id/tanggal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/tanggal"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            />

        <TextView
            android:id="@+id/tanggalTV"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            tools:text="2023-02-02"
            app:layout_constraintStart_toEndOf="@id/tanggal"
            app:layout_constraintTop_toTopOf="@id/tanggal"
            android:layout_marginStart="16dp"/>

        <TextView
            android:id="@+id/sesi"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            android:text="@string/sesi"
            app:layout_constraintStart_toStartOf="@id/tanggal"
            app:layout_constraintTop_toBottomOf="@id/tanggalTV" />

        <TextView
            android:id="@+id/sesiTv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            tools:text="1"
            app:layout_constraintStart_toStartOf="@id/tanggalTV"
            app:layout_constraintTop_toTopOf="@id/sesi"/>

        <Button
            android:id="@+id/btnBookingKelas"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/booking"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/sesiTv"
            android:layout_marginTop="32dp" />

        <ProgressBar
            android:id="@+id/progress_bar"
            style="?android:attr/progressBarStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:visibility="gone"
            android:layout_gravity="center"
            tools:visibility="visible"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"/>
    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.cardview.widget.CardView>